# expression_parser

./: CMakeLists.txt  README.md  Test.txt
.github/workflows/: cmake.yml
ExpressionParser/: CMakeLists.txt
Node/: CMakeLists.txt
Node/src/: Node.cpp
Operators/: CMakeLists.txt
Operators/include/: Operators.hpp
Operators/src/: Operators.cpp
Tests/: CMakeLists.txt  test_expression_parser.cpp  test_stoken.cpp  test_token.cpp
Token/: CMakeLists.txt
Token/include/: SToken.hpp  Token.hpp
Token/src/: OperatorToken.cpp  SToken.cpp  Token.cpp
include/: ExpressionParser.hpp  Node.hpp  OperatorToken.hpp  Operators.hpp  ShuntingYard.hpp  Token.hpp
src/: ExpressionParser.cpp  OperatorToken.cpp  Operators.cpp  SToken.cpp  ShuntingYard.cpp  Token.cpp
